--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@gsap/react": "^2.1.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
